img grid on mobile view fixed

--- a/css/style.css
+++ b/css/style.css
@@ -448,6 +448,10 @@ footer .nav-items {
         gap: 30px 0;
     }
 
+    .grid-container img {
+        height: auto;
+    }
+
     .grid-container > button {
         justify-self: center;
     }
